packages done almost

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		/>
 		<title>Vite + Vue + TS</title>
 	</head>
-	<body>
-		<div id="app"></div>
+	<body class="overflow-y-hidden">
+		<div id="app" class="overflow-y-hidden"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
