--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Quiz Teacher</title>
+		<title>Novda Quiz Teacher</title>
 	</head>
 	<body class="overflow-y-hidden">
 		<div id="app" class="overflow-y-hidden"></div>
